# simulink-helgrind

./: .gitignore  CMakeLists.txt  HelgrindOutput.txt
Model/: CMakeLists.txt
Model/ec-multithreading/Demo_ert_rtw/: Demo.c  Demo.h  Demo_private.h  Demo_types.h  ert_main.c
Model/ec-multithreading/slprj/ert/Gain/: Gain.c  Gain.h  Gain_private.h  Gain_types.h
Model/ec-multithreading/slprj/ert/SlowGain/: SlowGain.c  SlowGain.h  SlowGain_private.h  SlowGain_types.h
Model/ec-multithreading/slprj/ert/_sharedutils/: rtwtypes.h
Source/: CMakeLists.txt  main.cpp
